nixidy/generated/prod/multi-scrobbler/Service-multi-scrobbler.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: multi-scrobbler
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: multi-scrobbler
    app.kubernetes.io/service: multi-scrobbler
  name: multi-scrobbler
  namespace: media
spec:
  ports:
    - name: http
      port: 9078
      protocol: TCP
      targetPort: 9078
  selector:
    app.kubernetes.io/controller: multi-scrobbler
    app.kubernetes.io/instance: multi-scrobbler
    app.kubernetes.io/name: multi-scrobbler
  type: ClusterIP
