nixidy/generated/prod/multi-scrobbler/HTTPRoute-multi-scrobbler.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: multi-scrobbler
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: multi-scrobbler
  name: multi-scrobbler
  namespace: media
spec:
  hostnames:
    - multi-scrobbler.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          namespace: identity
          port: 4180
          weight: 1
